<resources>
    <string name="app_name">CW2</string>
    <string name="ratings">Ratings</string>
    <string name="search_movies">Search Movies</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="favourites">Favourites</string>
    <string name="display_movies">Display Movies</string>
    <string name="welcome_to_movieopolis">Welcome to Movieopolis !</string>
    <string name="register_movie">Register Movie</string>
    <string name="icon">icon</string>
    <string name="register_heading1">Register a Movie</string>
    <string name="register_heading2">Fill all the details below and save</string>
    <string name="enter_a_movie_name">Enter a movie name</string>
    <string name="name">Name</string>
    <string name="enter_movie_release_year">Enter movie release year</string>
    <string name="year">Year</string>
    <string name="enter_movie_director">Enter movie director</string>
    <string name="director">Director</string>
    <string name="enter_movie_rating_0_10">Enter movie rating 0-10</string>
    <string name="rating">Rating</string>
    <string name="enter_a_review">Enter a review</string>
    <string name="review">Review</string>
    <string name="enter_actors_seperated_by_commas">Enter actors seperated by commas</string>
    <string name="list_of_actors">List of Actors</string>
    <string name="save">Save</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="all_the_registered_movies_sorted_alphabetically">All the registered movies sorted alphabetically</string>
    <string name="all_movies">All Movies</string>
    <string name="pick_a_movie_and_click_imdb_button">Pick a movie and click IMDb button</string>
    <string name="image_of_the_movie">image of the movie</string>

    <string name="rating1">Rating:</string>
    <string name="search_imdb">search IMDb</string>
    <string name="search">Search</string>

    <string name="enter_a_name_and_click_search">Enter a name and click search</string>

    <string name="select_a_movie_to_edit">Select a movie to edit</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="edit_all_the_details_below_and_save">Edit all the details below and save</string>
    <string name="title">Title</string>

    <string name="actors">Actors</string>

    <string name="favourite_status">Favourite Status:</string>
    <string name="favourite">Favourite</string>
    <string name="not_favourite">Not Favourite</string>

    <string name="update">Update</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="view_and_edit_all_your_favourites">View and edit all your favourites !</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="actors">Actors</string>


</resources>