<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/main_menu_bg1"
                android:elevation="4dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="170dp"
                    android:layout_height="172dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/main_img1" />

                <TextView
                    android:id="@+id/register_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/welcome_to_movieopolis"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="40dp">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/light_blue"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_vertical"
                    android:text="@string/register_movie"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:onClick="onRegisterClick"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="40dp">

                <Button
                    android:id="@+id/btn_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/light_blue"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_vertical"
                    android:text="@string/display_movies"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:onClick="onDisplayClick"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="40dp">

                <Button
                    android:id="@+id/btn_favourites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/light_blue"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_vertical"
                    android:text="@string/favourites"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:onClick="onFavouritesClick"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="40dp">

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/light_blue"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_vertical"
                    android:text="@string/edit_movies"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:onClick="onEditMoviesClick"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="40dp">

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/light_blue"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_vertical"
                    android:text="@string/search_movies"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:onClick="onSearchClick"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="40dp">

                <Button
                    android:id="@+id/register_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/light_blue"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_vertical"
                    android:text="@string/ratings"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:onClick="onRatingsClick"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>